k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-api-svc
  namespace: hotel
spec:
  type: NodePort
  selector:
    app: hotel-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080   # pick any free NodePort (30000–32767)
